--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<div class="item"><a href="#">More...</a></div>
 				<div class="search">
 					<input class="input" type="text" placeholder="Search" >
-					<a href="#"><div id="bg"></div></a>
+					<a href="#"><div id="bg"><img src="images/search.png"></div></a>
 				</div>
 			</div>
 		</div>
