only footer left

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="rss">RSS</div>
 		</div>
 			<div class="bb-header">
-			<div class="bbitems" style="border:0"><a href="#"><p>Home</p></a></div>
+			<div class="bbitems-h"><a href="#"><p>Home</p></a></div>
 			<div class="bbitems"><a href="#"><p>UK</p></a></div>
 			<div class="bbitems"><a href="#"><p>Africa</p></a></div>
 			<div class="bbitems"><a href="#"><p>Asia</p></a></div>
@@ -52,7 +52,118 @@
 			<div class="bbitems"><a href="#"><p>Entertainment</p></a></div>
 			<div class="bbitems"><a href="#"><p>Video</p></a></div>
 		</div>
+			<div class="bb-header2">
+			<div class="bbitems1-h"><a href="#"><p>England</p></a></div>
+			<div class="bbitems1"><a href="#"><p>Northern Ireland</p></a></div>
+			<div class="bbitems1"><a href="#"><p>Scotland</p></a></div>
+			<div class="bbitems1"><a href="#"><p>Wales</p></a></div>
+			<div class="bbitems1"><a href="#"><p>UK Politics</p></a></div>
+			<div class="bbitems1"><a href="#"><p>Education</p></a></div>
+		</div>
 	</header>
+
+	<div class="container">
+		<div class="no-footer">
+		<div class="date"><strong>23 January 2015</strong> Last update at 16:27 GMT</div>
+		<div class="now">
+			<div class="first">
+				<div id="headline"><a href="#">
+					Seven-Party TV debate plan announced
+				</a></div>
+				<img src="images/first.png">
+				<div class="cont1">
+					<p>Broadcasters publish new plans for TV election debates including leaders of seven UK political parties, and say they will go ahead regardless of who takes part.</p>
+					<div class="inside-a"><a href="#">How to stage a seven-leader debate <span class="new">NEW</span></a></div>
+					<div class="inside-a"><a href="#">Analysis: Done deal?</a></div>
+					<div class="inside-a"><a href="#">NI parties not in TV debate plans</a></div>
+				</div>
+			</div>
+			<div class="second">
+				<img src="images/second.png">
+				<div class="cont2">
+				<div  class="head2"><a href="#">PM leads UK tributes to Saudi king</a></div>
+					<p>David Cameron says he is "deeply saddened" to hear of the death of Saudi Arabia's King Abdullah bin Abdulaziz.</p>
+					<div class="inside-a"><a href="#">Saudi Arabia's King Abdullah dies</a></div>
+					<div class="inside-a"><a href="#">Obituary: King Abdullah</a></div>
+					<div class="inside-a"><a href="#">Profile: King Salman of Saudi Arabia</a></div>
+					<div class="inside-a"><a href="#">Tory slams Saudi flags 'nonsense'</a></div>
+				</div>
+			</div>
+			<div class="second">
+				<img src="images/third.png">
+				<div class="cont2">
+				<div  class="head2"><a href="#">A&amp;E waiting times in England improve</a></div>
+					<p>Waiting times in A&amp;E units in England have improved to their best level since November - but the target is still being missed, figures show.</p>
+					<div class="inside-a"><a href="#">NHS Winter 2014-15: Weekly A&amp;E tracker</a></div>
+					<div class="inside-a"><a href="#">How hospitals have reached gridlock</a></div>
+					<div class="inside-a"><a href="#">Wales: Worst waits since 2009</a></div>
+					<div class="inside-a"><a href="#">How winter wards help hospitals</a></div>
+				</div>
+			</div>
+		</div>
+		<div class="right-col">
+		<div class="wl">
+			<div class="w-l">Watch/listen
+			<img src="images/boxes.png">
+			</div>
+			<div class="image">
+			<img src="images/l-arrow.png">
+			<img src="images/im.png">
+			<img src="images/r-arrow.png">
+			</div>
+			<div class="liv">
+				<img src="images/live.png"> <a href="#"> Radio 5 live</a>
+			</div>
+		</div>
+		<div class="fa">
+			<div id="fa-t">
+				Features &amp; Analysis
+			</div>
+			<div class="stories">
+				<div class="story">
+					<div class="photo">
+						<img src="images/1.png">
+					</div>
+					<div class="story-line">
+						<div class="fa-head"><a href="#">Mysterious phenomenon</a></div>
+						<p>What causes deja vu - and how does it feel to have it constantly?</p>
+					</div>
+				</div>
+				<div class="story">
+					<div class="photo">
+						<img src="images/2.png">
+					</div>
+					<div class="story-line">
+						<div class="fa-head"><a href="#">Clutter epidemic</a></div>
+						<p>The hazards of drowning in too much stuff</p>
+					</div>
+				</div>
+				<div class="story">
+					<div class="photo">
+						<img src="images/3.png">
+					</div>
+					<div class="story-line">
+						<div class="fa-head"><a href="#">Canine villans?</a></div>
+						<p>Why are Staffies seen by some as a 'chav dog'?</p>
+					</div>
+				</div>
+				<div class="story">
+					<div class="photo">
+						<img src="images/4.png">
+					</div>
+					<div class="story-line">
+						<div class="fa-head"><a href="#">Island baiting</a></div>
+						<p>Eradicating rats from South Georgia to reclaim it for seabirds</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+		</div>
+		<footer>
+			
+		</footer>
+	</div>
 
 
 </body>
