--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				</div>
 				<div class="story">
 					<div class="photo">
-						<img src="images/3.png">
+						<img src="images/3.PNG">
 					</div>
 					<div class="story-line">
 						<div class="fa-head"><a href="#">Canine villans?</a></div>
