--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header>
 		<div class="top-header">
 			<div class="top-nav">
-				<div class="item" id="logo"><a href="#"><img src="images/logo.png"></a></div>
+				<div class="item" id="logo"><a href="#"><img src="images/logo.PNG"></a></div>
 				<div class="item"><a href="#">News</a></div>
 				<div class="item"><a href="#">Sport</a></div>
 				<div class="item"><a href="#">Weather</a></div>
@@ -24,7 +24,7 @@
 				<div class="item"><a href="#">More...</a></div>
 				<div class="search">
 					<input class="input" type="text" placeholder="Search" >
-					<a href="#"><div id="bg"><img src="images/search.png"></div></a>
+					<a href="#"><div id="bg"><img src="images/search.PNG"></div></a>
 				</div>
 			</div>
 		</div>
@@ -70,7 +70,7 @@
 				<div id="headline"><a href="#">
 					Seven-Party TV debate plan announced
 				</a></div>
-				<img src="images/first.png">
+				<img src="images/first.PNG">
 				<div class="cont1">
 					<p>Broadcasters publish new plans for TV election debates including leaders of seven UK political parties, and say they will go ahead regardless of who takes part.</p>
 					<div class="inside-a"><a href="#">How to stage a seven-leader debate <span class="new">NEW</span></a></div>
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 			<div class="second">
-				<img src="images/second.png">
+				<img src="images/second.PNG">
 				<div class="cont2">
 				<div  class="head2"><a href="#">PM leads UK tributes to Saudi king</a></div>
 					<p>David Cameron says he is "deeply saddened" to hear of the death of Saudi Arabia's King Abdullah bin Abdulaziz.</p>
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 			<div class="second">
-				<img src="images/third.png">
+				<img src="images/third.PNG">
 				<div class="cont2">
 				<div  class="head2"><a href="#">A&amp;E waiting times in England improve</a></div>
 					<p>Waiting times in A&amp;E units in England have improved to their best level since November - but the target is still being missed, figures show.</p>
@@ -104,15 +104,15 @@
 		<div class="right-col">
 		<div class="wl">
 			<div class="w-l">Watch/listen
-			<img src="images/boxes.png">
+			<img src="images/boxes.PNG">
 			</div>
 			<div class="image">
-			<img src="images/l-arrow.png">
-			<img src="images/im.png">
-			<img src="images/r-arrow.png">
+			<img src="images/l-arrow.PNG">
+			<img src="images/im.PNG">
+			<img src="images/r-arrow.PNG">
 			</div>
 			<div class="liv">
-				<img src="images/live.png"> <a href="#"> Radio 5 live</a>
+				<img src="images/live.PNG"> <a href="#"> Radio 5 live</a>
 			</div>
 		</div>
 		<div class="fa">
@@ -122,7 +122,7 @@
 			<div class="stories">
 				<div class="story">
 					<div class="photo">
-						<img src="images/1.png">
+						<img src="images/1.PNG">
 					</div>
 					<div class="story-line">
 						<div class="fa-head"><a href="#">Mysterious phenomenon</a></div>
@@ -131,7 +131,7 @@
 				</div>
 				<div class="story">
 					<div class="photo">
-						<img src="images/2.png">
+						<img src="images/2.PNG">
 					</div>
 					<div class="story-line">
 						<div class="fa-head"><a href="#">Clutter epidemic</a></div>
@@ -149,7 +149,7 @@
 				</div>
 				<div class="story">
 					<div class="photo">
-						<img src="images/4.png">
+						<img src="images/4.PNG">
 					</div>
 					<div class="story-line">
 						<div class="fa-head"><a href="#">Island baiting</a></div>
