--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 			<div class="second">
-				<img src="images/third.PNG">
+				<img src="images/third.png">
 				<div class="cont2">
 				<div  class="head2"><a href="#">A&amp;E waiting times in England improve</a></div>
 					<p>Waiting times in A&amp;E units in England have improved to their best level since November - but the target is still being missed, figures show.</p>
