--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header>
 		<div class="top-header">
 			<div class="top-nav">
-				<div class="item" id="logo"><a href="#"><img src="images/logo.PNG"></a></div>
+				<div class="item" id="logo"><a href="#"><img src="images/logo.png"></a></div>
 				<div class="item"><a href="#">News</a></div>
 				<div class="item"><a href="#">Sport</a></div>
 				<div class="item"><a href="#">Weather</a></div>
