all png images fixed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header>
 		<div class="top-header">
 			<div class="top-nav">
-				<div class="item" id="logo"><a href="#"><img src="images/logo.PNG"></a></div>
+				<div class="item" id="logo"><a href="#"><img src="images/logo.png"></a></div>
 				<div class="item"><a href="#">News</a></div>
 				<div class="item"><a href="#">Sport</a></div>
 				<div class="item"><a href="#">Weather</a></div>
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 			<div class="second">
-				<img src="images/third.png">
+				<img src="images/third.PNG">
 				<div class="cont2">
 				<div  class="head2"><a href="#">A&amp;E waiting times in England improve</a></div>
 					<p>Waiting times in A&amp;E units in England have improved to their best level since November - but the target is still being missed, figures show.</p>
